<resources>
    <string name="app_name">صحيح البخاري</string>
    <string name="banner_ad_unit_id">ca-app-pub-3406286961979146/7141551917</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="searchable">Search</string>
    <string name="share">Share</string>
    <string name="share_text">Share Text</string>
    <string name="text_copy">Text Copy</string>
    <string name="more_app">More App</string>
    <string name="rating">Rating</string>
    <string name="send_email">Send Email</string>
    <string name="communication">Communication</string>
    <string name="favorite">Favorite</string>
    <string name="last_Reading">Last Reading</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="Click_again_to_close">Click again to close</string>
    <string name="help">Help</string>
    <string name="copy_text_to_clipboard">Text has been copied to clipboard</string>
    <string name="share_title_dilog">Share Text</string>
    <string name="add_to_favorite_toast">Added on favorite to successfully</string>
    <string name="index">Index</string>
    <string name="Delete_dilogTitle">Delete</string>
    <string name="Delete_MessagText">Delete from your favorite Are you sure?</string>
    <string name="dilog_yes">Yes</string>
    <string name="dilog_no">No</string>
    <string name="favorite_is_Empty">Favorite is Empty</string>
    <string name="title_activity_setting">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="setting_text_size">Text Size</string>
    <string name="setting_select_color">Color Selection</string>
    <string name="text_setting_fontsize">Font Size</string>
    <string name="Total_words_search">Total words search</string>
    <string name="Instant_activation_reading">Instant activation of reading</string>
    <string name="set_Time">Determine the time</string>
    <string name="add_mark">Add bookmark</string>
    <string name="marks">Bookmark</string>
    <string name="Bookmark_is_Empty">Bookmark is Empty</string>
    <string name="Delete_MessagText_mark">Bookmark will be deleted. Are you sure?</string>
    <string name="add_to_mark_toast">Added on Bookmark to successfully</string>
    <string name="text_color">Text Color</string>
    <string name="Title_exists_in_the_Favorites">Title exists in the Favorites</string>
    <string name="Choose_color">Choose color</string>
    <string name="Title_to_remind">must determine the Title to remind him of the page to read the topic</string>
    <string name="Subject_title">Subject title</string>
    <string name="remain_title">Reminders reading</string>
    <string name="title_activity_setting_">Settings</string>
    <string name="Time_remaind">Reminder time</string>
    <string name="open_subject">Open Subjecte to reading</string>
    <string name="dilog_close">Close</string>
    <string name="Exit">Exit</string>



</resources>

